--- a/blocitoff/app/views/items/index.html.erb
+++ b/blocitoff/app/views/items/index.html.erb
@@ -1,13 +1,5 @@
 <h1>This is your list of items:</h1>
 
-<% @items.each do |item| %>
-    <div class="media">
-      <div class="media-body">
-        <small>
-          <%= item.name %>
-        </small
-      </div>
-    </div>
-  <%end%>
+<%= render partial: 'item', locals: { item: @item } %>
 
 <%=link_to "Create a new item", new_user_item_path(@items), class: 'btn btn-success'%>
