--- a/blocitoff/app/assets/stylesheets/application.scss
+++ b/blocitoff/app/assets/stylesheets/application.scss
@@ -1,19 +1,22 @@
+@import "bootstrap-sprockets";
+@import "bootstrap";
+
 h3.sign_up {
   color: blue;
   font-size: 12px;
   font-family: sans-serif;
-  float: right;
+  float: right
 }
 
 h3.sign_in {
   color: blue;
   font-size: 12px;
   font-family: sans-serif;
-  float: right;
+  float: right
 }
 
 h3.boundary {
   color: blue;
   font-size: 12px;
-  float: right;
+  float: right
 }
