--- a/blocitoff/app/views/welcome/index.html.erb
+++ b/blocitoff/app/views/welcome/index.html.erb
@@ -1,2 +1,3 @@
-
-<h1>Blocitoff is awsome app</h1>
+<div class="container">
+  <%= image_tag("pushwagner01.png", alt: "rss feed", height: 700, width: 1200) %>
+</div>
