--- a/blocitoff/app/views/devise/registrations/new.html.erb
+++ b/blocitoff/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<h2>Sign up</h2>
+<h3>Sign up</h3>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
@@ -12,7 +12,6 @@
     <%= f.label :name %><br />
     <%= f.text_field :name, autofocus: true %>
   </div>
-
 
   <div class="field">
     <%= f.label :password %>
@@ -28,8 +27,6 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "Sign up" , class: 'btn btn-success'%>
   </div>
 <% end %>
-
-<%= render "devise/shared/links" %>
