--- a/blocitoff/app/views/items/index.html.erb
+++ b/blocitoff/app/views/items/index.html.erb
@@ -1,5 +1,6 @@
-<h1>This is your list of items:</h1>
-
-<%= render @items %>
-
-<%=link_to "Create a new item", new_user_item_path, class: 'btn btn-success'%>
+<div class="container">
+  <div class="form-group">
+    <%= render @items %>
+  </div>
+  <%=link_to "Create a new item", new_user_item_path, class: 'btn btn-success'%>
+</div>
