--- a/blocitoff/app/views/layouts/application.html.erb
+++ b/blocitoff/app/views/layouts/application.html.erb
@@ -7,16 +7,25 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<div class="container">
+  <%if user_signed_in?%>
+  <div class="container-fluid">
+    <ul class="nav navbar-nav navbar-right">
+        <li><%=link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %></li>
+        <li><%=link_to "Sign Out", destroy_user_session_path, method: :delete, :class => 'navbar-link' %></li>
+    </ul>
+  </div>
+  <%else%>
+  <div class="container-fluid">
+    <ul class="nav navbar-nav navbar-right">
+        <li><%= link_to "Sign Up", new_user_registration_path, :class => 'navbar-link'%> </li>
+        <li><%= link_to "Sign In", new_user_session_path, :class => 'navbar-link'%><li>
+    </ul>
+  </div>
+  <% end %>
 
-<%if user_signed_in?%>
-Signed in as: <strong><%=current_user.email%></strong>|<%=link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> - <%=link_to "Sign Out", destroy_user_session_path, method: :delete, :class => 'navbar-link' %>
-
-<%else%>
-<%= link_to "Sign Up", new_user_registration_path, :class => 'navbar-link'  %> -
-   <%= link_to "Sign In", new_user_session_path, :class => 'navbar-link'  %>
- <% end %>
-
-<%=yield%>
+  <%=yield%>
+</div>
 
 </body>
 </html>
