--- a/blocitoff/app/views/users/show.html.erb
+++ b/blocitoff/app/views/users/show.html.erb
@@ -1,5 +1,4 @@
 
- <h4>name: <%=@user.name%></h4>
- <h5><%=@user.email%></h5>
+ <h4><%=@user.name%></h4>
 
  <%=link_to "My To Do list", user_items_path(@user, @item), class: 'btn btn-success'%>
